Fixing #4596: image re-size lock buttons aren't accessible in high-contrast mode.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@4571 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/dialog.css
+++ b/_source/skins/kama/dialog.css
@@ -727,6 +727,12 @@ body .cke_dialog
 	position: relative;
 	top: 3px;
 }
+.cke_skin_kama .cke_hc a.cke_btn_locked,
+.cke_skin_kama .cke_hc a.cke_btn_unlocked,
+.cke_skin_kama .cke_hc a.cke_btn_reset
+{
+	border-style: solid;
+}
 
 .cke_skin_kama a.cke_smile img
 {
