--- a/_source/skins/v2/dialog.css
+++ b/_source/skins/v2/dialog.css
@@ -638,6 +638,12 @@ body .cke_dialog
 	position: relative;
 	top: 3px;
 }
+.cke_skin_v2 .cke_hc a.cke_btn_locked,
+.cke_skin_v2 .cke_hc a.cke_btn_unlocked,
+.cke_skin_v2 .cke_hc a.cke_btn_reset
+{
+	border-style: solid;
+}
 
 .cke_skin_v2 a.cke_smile img
 {
